FIREFLY-1477: add support for parquet files - bring in DuckDB; an online analytical processing(OLAP) database that support direct import and export of parquet files - use DuckDB for delimiter-separated text file format, like csv and tsv - Add this feature to 'Upload' only - clean up embedded database related code. - FileAnalysis: add support for parquet files. - Allow logger level to be set from runtime